# Triang3d

./: config.py  main.py  pyproject.toml
gui/: main_window.py  skeleton_view.py  skeleton_view_old.py
model/: __init__.py  camera_calibration.py  dataset.py  person.py  sequence.py
resources/: triangulator.ui
service/: calibration_utils.py  sample_discoverer.py  sample_player.py  skeletal_reconstructor.py  triangulation_utils.py
