[tool.poetry]
name = "labeler"
version = "0.1.0"
description = ""
authors = ["Xert <xertdev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
PyQt5 = "^5.15.7"
PySide6 = "^6.4.0"
opencv-python = "^4.6.0"
mediapipe = "^0.9.0"
PySide6-Addons = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
